fotos con hover

--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Maquetado</title>
+  <link rel="stylesheet" href="assets/css/icons.data.svg.css">
+  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="https://use.typekit.net/af/b5823a/00000000000000000001743c/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3 format("woff2")">
+  <link rel="stylesheet" href="https://use.typekit.net/af/b5823a/00000000000000000001743c/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3 format("woff")">
+  <link rel="stylesheet" href="https://use.typekit.net/af/b5823a/00000000000000000001743c/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3) format("opentype")">
+  <title>BOOTSTRAP-maquetado</title>
 </head>
-<body>
+<body class="">
+  <header>
+    <ul><li>This week only, use code BONDBACK15 to get 15% off your end of lease cleaning Express 14/05/2017.</li></ul>
+  </header>
+  <div class="container">
+
+    <div class="fondo">
+      <img src="assets/site - comportamiento y diseño/Desktop.png" alt="">
+    </div>
+    <div class="icon--feature-eco">
+
+    </div>
+  </div>
+
+
+
+
+
+
+  <div class="div-img">
+    <img src="assets/img/gallery/carpet-steam-cleaning.jpg" alt="" class="fotos fotos-01">
+    <img src="assets/img/gallery/oven-cleaner.jpg" alt="" class="fotos fotos-02">
+    <img src="assets/img/gallery/oven-cleaning.jpg" alt="" class="fotos fotos-03">
+    <img src="assets/img/gallery/window-cleaner.jpg" alt="" class="fotos fotos-04">
+    <img src="assets/img/gallery/exit-cleaner.jpg" alt="" class="fotos fotos-05">
+  </div>
 
 </body>
 </html>
